--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "private": true,
+  "name": "history-app",
   "author": "AUTHOR_NAME <AUTHOR_EMAIL>",
   "description": "RAILS_APP_TESTING_SUIT",
   "devDependencies": {
