--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "author": "AUTHOR_NAME <AUTHOR_EMAIL>",
   "description": "RAILS_APP_TESTING_SUIT",
   "devDependencies": {
+    "bower": "~1.2",
     "coffee-script": "~1.7.1",
     "mocha": "~1.18.2",
     "chai": "~1.9.1",
@@ -29,10 +30,14 @@
     "coffeegulp": "~0.0.4"
   },
   "engine": {
-    "node": ">= 0.10"
+    "node": ">= 0.10",
+    "npm": ">=1.3"
   },
   "repository": {
     "type": "git",
     "url": "http://github.com/npm/npm.git"
+  },
+  "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
